--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,12 @@ dependencies:
   json_annotation: ^4.8.0
   pull_to_refresh_flutter3: ^2.0.1
   fade_shimmer: ^2.0.1
+  url_launcher: ^6.1.9
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   build_runner: ^2.2.0
