--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   provider: ^6.0.3
+  flutter_dotenv: ^5.0.2
   http: ^0.13.4
   go_router: ^12.1.1
   animate_do: ^3.0.2
@@ -34,5 +35,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - .env
     - assets/
     - assets/images/
